--- a/src/components/atoms/PillInput/PillInput.module.scss
+++ b/src/components/atoms/PillInput/PillInput.module.scss
@@ -1,7 +1,53 @@
 @import "../../../styles/_tokens.scss";
 
+// Screen reader only class
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .pillInput {
   width: 100%;
+}
+
+// Label styles
+.label {
+  display: block;
+  margin-bottom: var(--spacing-xs);
+  font-family: var(--font-family);
+  font-size: var(--font-size-sm);
+  font-weight: var(--font-weight-medium);
+  color: var(--color-text-primary);
+  line-height: var(--line-height-sm);
+
+  .required {
+    color: var(--color-red-6);
+    margin-left: var(--spacing-xs);
+  }
+}
+
+// Helper text and error styles
+.helperText {
+  margin-top: var(--spacing-xs);
+  font-family: var(--font-family);
+  font-size: var(--font-size-sm);
+  color: var(--color-text-secondary);
+  line-height: var(--line-height-sm);
+}
+
+.errorText {
+  margin-top: var(--spacing-xs);
+  font-family: var(--font-family);
+  font-size: var(--font-size-sm);
+  color: var(--color-red-6);
+  line-height: var(--line-height-sm);
 }
 
 .inputContainer {
@@ -19,12 +65,13 @@
   font-size: var(--font-size-md);
   line-height: var(--line-height-md);
   color: var(--color-text-primary);
-  transition: none;
+  transition: var(--motion-transition-normal);
 
   &:focus-within {
     border-color: var(--color-primary);
     box-shadow: 0 0 0 var(--border-width-thin) var(--color-primary);
-    transition: none;
+    outline: var(--outline-focus);
+    outline-offset: var(--outline-offset);
   }
 
   &.disabled {
@@ -69,6 +116,15 @@
 
   &:disabled {
     cursor: not-allowed;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    outline: var(--outline-focus);
+    outline-offset: var(--outline-offset);
   }
 }
 
@@ -126,5 +182,30 @@
     opacity: var(--opacity-50);
     cursor: not-allowed;
     pointer-events: none;
+  }
+}
+
+// Focus management for pills
+.pillsContainer {
+  .pill {
+    &:focus-within {
+      outline: var(--outline-focus);
+      outline-offset: var(--outline-offset);
+      border-radius: var(--radius-sm);
+    }
+  }
+}
+
+// Responsive adjustments
+@media (max-width: var(--breakpoint-mobile)) {
+  .pillInput {
+    .label {
+      font-size: var(--font-size-sm);
+    }
+
+    .helperText,
+    .errorText {
+      font-size: var(--font-size-xs);
+    }
   }
 }
